# soan-tai-lieu

./: .gitignore  changelog.md  implementation_plan.md  pyproject.toml  readme.md  requirements.txt  task.md  yccd_bai4.txt
.agents/: agents.md
.brain/: brain.json  brain_archive_bai3.md  handover.md  implementation_plan.md  read_docx_utf8.py  session.json
agent soạn tài liệu/: readme.md
engine/: dry_run.py  gems_analyzer.py  gems_orchestrator.py  gems_styles.py  homework_exporter.py  homework_generator.py  image_renderer.py  khbd_exporter.py  main.py  notebooklm_executor.py  pht_exporter.py  quality_checker.py  requirements.txt  restructure_output.py  setup_dirs.py  worksheet_generator.py
gems/: __init__.py  __main__.py  cli.py
scratch/: generate_notebook_materials.py
skills/: README.md  awf-gems_workflow_skill.md  docx_skill.md  gems_content_generator_skill.md  gems_khbd_generation_skill.md  gems_physics_skill.md  hermes-gems-automation.md
tai-lieu-goc/: CD1 Cau Truc Cua Chat - Test.docx  CD1 Cau Truc Cua Chat.docx  CD3 Noi Nang Nhiet Luong Nhiet Dung Rieng.docx  CD5 Nhiet Do Thang Nhiet Do Nhiet Ke.docx  CD6 Nhiet Nong Chay Rieng.docx  CD7 Nhiet Hoa Hoi Rieng.docx  KHBĐ_Agent_TechnicalDoc_v3.0_2026-06-30.docx  KẾ HOẠCH GIẢNG DẠY.docx  bai5_raw.txt  yccd_bai3.txt
tests/: test_cli.py  test_curriculum_config.py  test_docx_layout.py  test_docx_lint.py  test_docx_styles.py  test_exam_format.py  test_from_json.py  test_homework_exporter.py  test_khbd_exporter.py  test_latex_clean.py  test_markdown_ir.py  test_markdown_lint.py  test_nlm_cli.py  test_renderer.py  (+6 more)
(+339 files in other folders)
