[project]
name = "gems"
version = "9.0.0"
description = "GEMS — Hệ thống tự động biên soạn học liệu Vật lý 12 (Gemini API + NotebookLM)"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "python-pptx>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
